# Primal.Genesis

./: .dockerignore  .editorconfig  .gitignore  .yamllint.yml  @lessons-learned.md  @memories.md  @scratchpad.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIAGNOSIS.md  Dockerfile.backup  MANIFEST.in  MIGRATION_NOTES.md  Makefile  PRIVACY_POLICY.md  PR_DESCRIPTION.md  README.md  UPGRADE_SUMMARY.md  amplify.yml  config.py  docker-compose.yml  ignition_protocol.py  pyproject.toml  pytest.ini  quantum_cli.py  requirements-test.txt  requirements.txt  run_athenamist.sh  run_web_interface.py  setup.cfg  setup.py
.cursor/: lessons-learned.md  memories.md  scratchpad.md
.github/: actionlint.yml
.github/workflows/: amplify-deploy.yml  amplify-deploy.yml.backup  ci-optimized.yml  ci.yml  deploy.yml  deploy.yml.backup  pages.yml  workflow-hygiene.yml
.husky/: pre-commit
apps/console/: README.md
apps/console/src/: App.css  App.tsx
apps/console/src/components/: ConsoleDashboard.tsx
apps/console/src/components/analytics/: VoiceAnalyticsDashboard.tsx
apps/console/src/components/styles/: ConsoleDashboard.css
apps/console/src/hooks/: useSelfUpgrade.ts
apps/console/src/providers/: ChatProvider.tsx  VoiceProvider.tsx
apps/console/src/services/: api.ts
apps/console/src/types/: chat.ts
apps/override-core/: README.md  index.js  package-lock.json  package.json
apps/pge-runner/: README.md  override_rules.json  pge.manifest.json  run.ts  watchers.json
archive/concepts/: codex_registry.md
archive/legacy_protocols/: ignition_protocol.py
archive/old_docs/: REPO_AUDIT_ACTIONS.md  REPO_AUDIT_MASTER.md
athenamist_integration/: __init__.py  lilithos_integration.py  lilitu_sunny_integration.py  network_context.py  phantom_integration.py  primal_sovereign_integration.py  shadow_nexus_integration.py  standalone_demo.py  the_nine_integration.py  web_interface.py  xai_integration.py
athenamist_integration/core/: ai_integration.py  phantom_integration.py  quantum_memory.py  quantum_network.py  quantum_sync.py  sam_integration.py
athenamist_integration/web/: app.py
docs/: API.md  ARCHITECTURE.md  CURRENT_STATE.md  DEVELOPER_GUIDE.md  ROADMAP.md  VISION.md  quantum_network.md
docs/DECISIONS/: 2025-03-26_0450_PHASE10A_INTEGRATION_CONTRACT_SEED.md  2025-03-26_0500_PHASE10B_INTEGRATION_CONTRACT_VERIFICATION.md  ATHENA_SCAFFOLD_RESERVATION.md  PHASE2_MIGRATION_MAP.md  PHASE3A_CONFIG_MIGRATION.md  PHASE3B_CONSOLE_MIGRATION.md  PHASE3C_TOOLING_MIGRATION.md  PHASE3D_DUPLICATE_CLEANUP.md  PHASE3E_PACKAGE_IDENTITY_NORMALIZATION.md  PHASE4A_REGISTRY_SEED.md  PHASE4B_REGISTRY_HARDENING.md  PHASE4C_REGISTRY_SEMANTICS_CLEANUP.md  PHASE4D_REGISTRY_VERIFICATION_HARDENING.md  PHASE5A_CORE_SPINE_BUILD.md  PHASE5B_CORE_SPINE_VERIFICATION.md  PHASE5C_VISIBILITY_EXECUTION_ATHENA_BRIDGE.md  PHASE5D_VISIBILITY_EXECUTION_ATHENA_VERIFICATION.md  PHASE6A_CONSOLE_ATHENA_RUNTIME_BRIDGE.md  PHASE6B_CONSOLE_ATHENA_RUNTIME_VERIFICATION.md  PHASE7A_API_EXPOSURE_SEED.md  PHASE7B_API_VERIFICATION_HARDENING.md  PHASE8A_CONSOLE_WIRING_REVAMP.md  PHASE8B_CONSOLE_VERIFICATION_HARDENING.md
override_core/: log_watcher.js
pge/: discord-baddie-bridge.ts  pge.ts
scripts/: deploy_athenacore.sh  deploy_fix_and_restart.sh  deploy_lilithos.sh  diagnose_services.sh  diagnose_services_detailed.sh  direct_deploy_fix.sh  direct_fix_sam_integration.sh  fix_deployment.sh  fix_pip_and_deps.sh  fix_pip_and_urllib3.sh  fix_python_environment.sh  fix_sam_direct.sh  fix_sam_integration.py  fix_service_configs.sh  fix_urllib3_openssl.sh  install_dependencies.sh  install_direct_deps.sh  install_missing_deps.sh  install_python38.sh  prepare_aws_keys.sh  reliable_deploy_fix.sh  resolve_dependency_issues.sh  setup_services_manually.sh  update_ec2_keys.sh  update_ec2_keys_fixed.sh  verify_deployment.sh
src/agents/: PGES.ts
src/athena/: README.md  signal.js
src/components/analytics/: VoiceAnalyticsDashboard.tsx
src/components/chat/: Chat.tsx
src/hooks/: README.md  useVoice.ts
src/providers/: README.md
src/types/: README.md
tests/: __init__.py  conftest.py
tests/athenamist_integration/core/: test_quantum_memory.py  test_quantum_network.py  test_quantum_sync.py
