[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "primal.genesis"
version = "0.1.0"
description = "Primal Genesis Engine - A foundational architecture for local development and sovereign systems"
readme = "README.md"
authors = [
    { name = "Sovereign Development Team", email = "dev@primalgenesis.xyz" }
]
license = { text = "Proprietary" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.1",
    "python-dotenv>=1.0.0",
    "orjson>=3.9.10",
    "uvloop>=0.19.0",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.2",
    "jinja2>=3.1.2",
    "cryptography>=41.0.7",
    "numpy>=1.26.2",
    "psutil>=5.9.6"
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.1",
    "types-requests>=2.31.0.1",
    "types-python-dateutil>=2.8.19.14",
    "types-pyyaml>=6.0.12.11",
    "typing-extensions>=4.7.1"
]

[tool.setuptools]
package-dir = { "" = "." }
packages = find:

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
