[metadata]
description-file = README.md
license_file = LICENSE

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9
include_package_data = True
zip_safe = False

[options.packages.find]
where = .
include = athenamist_integration*; tests*

[coverage:run]
source = athenamist_integration
omit =
    */tests/*
    */__pycache__/*
    */_version.py

[coverage:report]
show_missing = True
skip_covered = True

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude = .git,__pycache__,.tox,.eggs,build,dist,venv
per-file-ignores =
    # Allow 'import *' in __init__.py files
    __init__.py: F403,F401
    # Allow print statements in tests
    tests/*.py: T201,T203

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
check_untyped_defs = True
no_implicit_optional = True
ignore_missing_imports = True

[egg_info]
tag_build =
tag_date = 0
